--- a/FlowerCollector/Base.lproj/Main.storyboard
+++ b/FlowerCollector/Base.lproj/Main.storyboard
@@ -257,17 +257,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qrj-5b-7me">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZzT-9C-NIF">
-                                        <rect key="frame" x="166" y="32" width="44" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qe9-8R-T28">
                                         <rect key="frame" x="0.0" y="20" width="44" height="44"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="44" id="gDq-au-Efy"/>
-                                            <constraint firstAttribute="height" constant="44" id="ssT-5S-KCe"/>
+                                            <constraint firstAttribute="height" constant="44" id="gzt-nR-XvX"/>
+                                            <constraint firstAttribute="width" constant="44" id="pIu-sK-naA"/>
                                         </constraints>
                                         <state key="normal" image="common_navigationbar_btn_back_black"/>
                                         <connections>
@@ -275,14 +269,12 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="Bhm-Ip-pZ7"/>
-                                    <constraint firstItem="Qe9-8R-T28" firstAttribute="leading" secondItem="Qrj-5b-7me" secondAttribute="leading" id="DLX-LL-MiG"/>
                                     <constraint firstAttribute="width" constant="375" id="Sxu-JU-cAU"/>
-                                    <constraint firstItem="ZzT-9C-NIF" firstAttribute="centerY" secondItem="Qe9-8R-T28" secondAttribute="centerY" id="er4-DB-IMT"/>
-                                    <constraint firstItem="ZzT-9C-NIF" firstAttribute="centerX" secondItem="Qrj-5b-7me" secondAttribute="centerX" id="knd-LI-mKF"/>
-                                    <constraint firstItem="ZzT-9C-NIF" firstAttribute="centerY" secondItem="Qrj-5b-7me" secondAttribute="centerY" constant="10" id="veP-qG-dvK"/>
+                                    <constraint firstItem="Qe9-8R-T28" firstAttribute="leading" secondItem="Qrj-5b-7me" secondAttribute="leading" id="qPN-iZ-qxX"/>
+                                    <constraint firstAttribute="bottom" secondItem="Qe9-8R-T28" secondAttribute="bottom" id="qqT-nN-OYa"/>
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bouquet-2207206_1280" translatesAutoresizingMaskIntoConstraints="NO" id="uct-HP-0AW">
@@ -292,24 +284,83 @@
                                     <constraint firstAttribute="width" constant="300" id="kLP-Np-3Rz"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6b3-zZ-p8I">
+                                <rect key="frame" x="8" y="309" width="359" height="350"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flowers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pCV-Mj-c5I">
+                                        <rect key="frame" x="25" y="25" width="47" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TULIPS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vtj-WE-exK">
+                                        <rect key="frame" x="25" y="51" width="77" height="28"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Like many flowers, different colors of tulips also often carry their own significance." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBB-sI-zK2">
+                                        <rect key="frame" x="25" y="89" width="309" height="33.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.20553809404373169" green="0.049234487116336823" blue="0.13551086187362671" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPG-Tb-8Fh">
+                                        <rect key="frame" x="0.0" y="300" width="359" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="lfl-oa-kGx"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="ADD TO CART"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$13" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncT-sY-6OE">
+                                        <rect key="frame" x="287" y="42" width="47" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                        <color key="textColor" red="0.50196081400000003" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Vtj-WE-exK" firstAttribute="leading" secondItem="6b3-zZ-p8I" secondAttribute="leading" constant="25" id="1OM-dM-vol"/>
+                                    <constraint firstItem="pCV-Mj-c5I" firstAttribute="top" secondItem="6b3-zZ-p8I" secondAttribute="top" constant="25" id="2M3-co-yUd"/>
+                                    <constraint firstAttribute="bottom" secondItem="SPG-Tb-8Fh" secondAttribute="bottom" id="8B6-w8-TH4"/>
+                                    <constraint firstAttribute="trailing" secondItem="SPG-Tb-8Fh" secondAttribute="trailing" id="DmC-tY-frU"/>
+                                    <constraint firstAttribute="height" constant="350" id="JHY-oq-Mgv"/>
+                                    <constraint firstItem="FBB-sI-zK2" firstAttribute="top" secondItem="Vtj-WE-exK" secondAttribute="bottom" constant="10" id="R0U-0a-Zn1"/>
+                                    <constraint firstItem="Vtj-WE-exK" firstAttribute="top" secondItem="pCV-Mj-c5I" secondAttribute="bottom" constant="10" id="S0T-VX-gHv"/>
+                                    <constraint firstAttribute="trailing" secondItem="FBB-sI-zK2" secondAttribute="trailing" constant="25" id="avc-E5-uzx"/>
+                                    <constraint firstItem="SPG-Tb-8Fh" firstAttribute="leading" secondItem="6b3-zZ-p8I" secondAttribute="leading" id="b6P-vX-ONo"/>
+                                    <constraint firstItem="FBB-sI-zK2" firstAttribute="leading" secondItem="6b3-zZ-p8I" secondAttribute="leading" constant="25" id="dhh-UE-4UK"/>
+                                    <constraint firstAttribute="trailing" secondItem="ncT-sY-6OE" secondAttribute="trailing" constant="25" id="mWp-zu-CVh"/>
+                                    <constraint firstItem="FBB-sI-zK2" firstAttribute="top" secondItem="ncT-sY-6OE" secondAttribute="bottom" constant="13" id="tcq-o9-TuM"/>
+                                    <constraint firstItem="pCV-Mj-c5I" firstAttribute="leading" secondItem="6b3-zZ-p8I" secondAttribute="leading" constant="25" id="xBJ-b0-LQ2"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="uct-HP-0AW" firstAttribute="top" secondItem="Qrj-5b-7me" secondAttribute="bottom" id="1YG-aP-SXy"/>
                             <constraint firstItem="Qrj-5b-7me" firstAttribute="top" secondItem="bo7-w0-6KZ" secondAttribute="top" id="3cR-SK-AOB"/>
                             <constraint firstItem="uct-HP-0AW" firstAttribute="leading" secondItem="bo7-w0-6KZ" secondAttribute="leading" constant="37" id="EJm-Ou-sP7"/>
                             <constraint firstItem="Qrj-5b-7me" firstAttribute="leading" secondItem="bo7-w0-6KZ" secondAttribute="leading" id="F8q-tJ-X1p"/>
+                            <constraint firstItem="6b3-zZ-p8I" firstAttribute="leading" secondItem="bo7-w0-6KZ" secondAttribute="leading" constant="8" id="SYL-i4-rfP"/>
                             <constraint firstAttribute="trailing" secondItem="uct-HP-0AW" secondAttribute="trailing" constant="38" id="bsV-xA-Nr6"/>
+                            <constraint firstItem="Cy2-ya-YLS" firstAttribute="top" secondItem="6b3-zZ-p8I" secondAttribute="bottom" constant="8" id="iak-Aa-sYc"/>
+                            <constraint firstAttribute="trailing" secondItem="6b3-zZ-p8I" secondAttribute="trailing" constant="8" id="qGp-n2-86L"/>
                             <constraint firstAttribute="trailing" secondItem="Qrj-5b-7me" secondAttribute="trailing" id="v66-PH-c9l"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="descriptionView" destination="6b3-zZ-p8I" id="Pv3-Ln-abV"/>
+                        <outlet property="headerView" destination="Qrj-5b-7me" id="gJE-iW-gz1"/>
                         <outlet property="imageView" destination="uct-HP-0AW" id="pSv-KS-cnP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CZG-0R-Ekf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2228" y="123"/>
+            <point key="canvasLocation" x="2228" y="122.78860569715144"/>
         </scene>
     </scenes>
     <resources>
